--- a/.env
+++ b/.env
@@ -24,6 +24,6 @@ APP_SECRET=33f5094e363da4771ad3987540cbeb55
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 #DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://u480162688_dieu:hfHSythCc9ep45RQ@sql849.main-hosting.eu/u480162688_paradisedb?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://u480162688_dieu:hfHSythCc9ep45RQ@sql849.main-hosting.eu/u480162688_paradisedb?serverVersion=mariadb-10.4.13&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
