--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             provider: app_user_provider
             custom_authenticator: App\Security\AdminAuthenticator
             logout:
-                path: app_logout
+                path: admin_deconnexion
                 # where to redirect after logout
                 target: accueil
 
@@ -33,8 +33,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin/connexion, roles: PUBLIC_ACCESS }
-        - { path: ^/admin/check, roles: PUBLIC_ACCESS }
         - { path: ^/admin/, roles: ROLE_ADMIN }
         - { path: ^/, roles: PUBLIC_ACCESS }
 
