--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             provider: app_user_provider
             custom_authenticator: App\Security\AdminAuthenticator
             logout:
-                path: admin_deconnexion
+                path: deconnexion
                 # where to redirect after logout
                 target: accueil
 
